# classroom-node

./: .gitignore  Makefile  README.md  decawaves.py  docker-compose.yml  entry-point.sh  logga.py  pi-setup.md  pylintrc  pyproject.toml  run_capture.py  run_upload.py  setup_pi_64.sh
camnode/: decawaves.py  utils.py
capture/: Dockerfile  __init__.py  pi4.dockerfile  requirements.txt  simple-loop.py  streamer.py
capture_v2/: Dockerfile  README.md  __main__.py  camera_controller.py  camera_output_segmenter.py  capture.py  config.py  entry-point.sh  flexible_ffmpeg_output.py  log.py  pi3-32.dockerfile  pi3-64.dockerfile  pi4-64.dockerfile  scheduler.py  server.py  uploader.py  util.py
cdp_player/: README.md  cdp-player.dockerfile  cdp-player.sh  cdplog-2022-11-14.00  cuwb-network-2022-11-08.cuwb  install-custom.sh
collector/: requirements.txt
cuwb_stream/: Dockerfile  Makefile  README.md  collector.py  development.txt  network.py  requirements.txt  simple_test.py
k3s/: admin.yaml  camera.yaml  gateway.yaml  local-path-storage.yaml  minio.yaml  redis.yml  scheduler.yml  shoes.yaml  streams.yaml  temp.yaml  trays.yaml
k8s/: camera.yaml  classroom-ns.yaml  cuwb-service.yml  dash-user.yml  directions.md  fluentd-general-config.yml  fluentd-general-monitoring.yml  fluentd-s3-config.yml  fluentd-s3-scheduler.yml  fluentd-s3.yml  fluentd.yml  fluentd_s3.yml  greenbrier.kube.config  kube-setup.md  minio.yaml  ok.txt  redis.yml  scheduler.yml  shell.yaml  sokoban.yaml  uploader.yml
proxy/: requirements-test.txt  requirements.txt
scheduler/: Dockerfile  __init__.py  __main__.py  controller.py  requirements.txt
scripts/: check_names.py  cleanup-data.py  fixboot.py  info.py  k3s-agent.service  k3s-config.json  k3s-upgrade.py  pi-setup.md  restart.py  run-proxy.sh  shutdown.py  shutdown.sh  statsd-test.py  tick-setup.py  update.py
test/: collector.yaml  test_schedule.yaml
(+44 files in other folders)
